# decclass

./: CMakeFile.txt  CMakeLists.txt  README.md
expSrc/: main.cpp
include/: CXXField.h  Consumer.h  FieldFinder.h  FieldFinderAction.h  StructExpander.h
src/: FieldFinder.cpp  StructExpander.cpp  main.cpp
tests/: input.cpp  vector3f.h
